Hide overflow of 'page' elements in the PDF plugin. This avoids premature appearance of scrollbars

--- a/PDFViewerPlugin.css
+++ b/PDFViewerPlugin.css
@@ -1,7 +1,7 @@
 .page {
     margin: 7px auto 7px auto;
     position: relative;
-    overflow: visible;
+    overflow: hidden;
     background-clip: content-box;
     background-color: white;
     
